--- a/Src/Newtonsoft.Json/Newtonsoft.Json.Custom.csproj
+++ b/Src/Newtonsoft.Json/Newtonsoft.Json.Custom.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <LibraryFrameworks>netstandard2.0;net45</LibraryFrameworks>
+  </PropertyGroup>
+  <PropertyGroup>
     <TargetFrameworks Condition="'$(LibraryFrameworks)'==''">net45;net40;net35;net20;netstandard1.0;netstandard1.3;netstandard2.0;portable-net45+win8+wpa81+wp8;portable-net40+win8+wpa81+wp8+sl5</TargetFrameworks>
     <TargetFrameworks Condition="'$(LibraryFrameworks)'!=''">$(LibraryFrameworks)</TargetFrameworks>
     <LangVersion>latest</LangVersion>
@@ -23,7 +26,7 @@
     <PackageLicenseUrl>https://raw.github.com/JamesNK/Newtonsoft.Json/master/LICENSE.md</PackageLicenseUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl> 
     <RootNamespace>Newtonsoft.Json</RootNamespace>
-    <AssemblyName>Newtonsoft.Json</AssemblyName>
+    <AssemblyName>Newtonsoft.Json.Custom</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <MinClientVersion>2.12</MinClientVersion>
     <!-- including PDB files in NuGet for source link because symbolsource.org does not support portable PDBs -->
